<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_decryption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decryption_addr" />

        <EditText
            android:id="@+id/et_decryption_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:hint="@string/decryption_addr_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_num_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numkeyboard_normal" />

        <EditText
            android:id="@+id/et_num_normal"
            android:layout_width="140dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_num_random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numkeyboard_random" />

        <EditText
            android:id="@+id/et_num_random"
            android:layout_width="140dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_alphabet_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alphabetkeyboard_normal" />

        <EditText
            android:id="@+id/et_alphabet_normal"
            android:layout_width="140dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clearInput"
        android:text="@string/clear_keyboard" />

    <LinearLayout
        android:id="@+id/ll_num_normal_customed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numkeyboard_normal_customed" />

        <EditText
            android:id="@+id/et_num_normal_customed"
            android:layout_width="140dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_num_random_customed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numkeyboard_random_customed" />

        <EditText
            android:id="@+id/et_num_random_customed"
            android:layout_width="140dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_alphabet_normal_customed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alphabetkeyboard_normal_customed" />

        <EditText
            android:id="@+id/et_alphabet_normal_customed"
            android:layout_width="140dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>